--- a/dxfwrite.lpi
+++ b/dxfwrite.lpi
@@ -63,7 +63,7 @@
       <local>
         <FormatVersion Value="1"/>
         <HostApplicationFilename Value="C:\Quellen\promet-erp\promet\output\i386-win32\pscriptedit.exe"/>
-        <CommandLineParams Value="&quot;--config-path=devel&quot; Test.Video"/>
+        <CommandLineParams Value="&quot;--config-path=devel&quot; Test.DXF"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
